[package]
name = "warp-sessions"
license = "MIT"
version = "1.0.17"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2021"
description = "Generic session middleware for the warp HTTP framework"
repository = "https://github.com/ajpauwels/warp-sessions.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
async-trait = "0.1.56"
serde = { version = "1.0.139", features = ["derive"] }
warp = "0.3.2"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
http = "0.2.8"
