[package]
name = "warp-sessions"
license = "MIT"
version = "1.0.18"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2021"
description = "Generic session middleware for the warp HTTP framework"
repository = "https://github.com/ajpauwels/warp-sessions.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-session = { git = "https://github.com/http-rs/async-session", branch = "overhaul-session-and-session-store" }
async-trait = "0.1.63"
serde = { version = "1.0.152", features = ["derive"] }
warp = "0.3.3"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
http = "0.2.8"
