[package]
name = "warp-sessions"
license = "MIT"
version = "1.0.20"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2021"
description = "Generic session middleware for the warp HTTP framework"
repository = "https://github.com/ajpauwels/warp-sessions.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
warp = "0.3.7"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
